 - Retired `pqxx::encrypt_password()`.  Use the ones in `pqxx::connection`.
 - Retired `pqxx::prepare::dynamic_params`.  Use `pqxx::params`.
 - Retired deprecated `stream_to` constructors.  Use factory functions.
 - Retired `transaction_base::unesc_raw()`.  Use `unesc_bin()`.
 - Retired `transaction_base::quote_raw()`.  Use `quote()` with `bytes_view`.
 - Retired result row slicing.
 - Assume compiler supports concepts.
 - Assume compiler supports integral conversions in `charconv`.
 - Assume compiler supports spans, ranges, and `cmp_less` etc.
 - Retired `binarystring` and its headers.
 - Retired result row slicing.
 - Compiler must support integral conversions in `charconv`.
 - Assume compiler supports `std::remove_cvref_t`.
 - Assume compiler supports `[[likely]]` & `[[unlikely]]`.
 - Assume compiler supports `ssize()`.
 - Assume compiler supports ISO-646 without needing `<ciso646>` header.
7.10.2
 - CMake: Drop unneeded, broken `PostgreSQL_INCLUDE_DIRS` definition. (#981)
 - Handle spaces and single quotes in `connection::connection_string()` (#992)
7.10.1
 - Fix string conversion buffer budget for arrays containing nulls. (#921)
 - Remove `-fanalyzer` option again; gcc is still broken.
 - Oops, no, minimum CMake version is not 3.28, but 3.12!
 - Fix warnings on compilers that accept `[[assume]]` with a warning. (#928)
 - Can't pass parameters to streaming query.
 - CMake build: take libpq path from build target, not absolute path. (#964)
 - Added explanation to `listen()` of when notifications come in. (#963)
7.10.0
 - Deprecate `errorhandler`; replace with lambda-friendly "notice handlers."
 - Deprecate `notification_receiver`; replace with "notification handlers"
 - Bump minimum CMake version to 3.12. (#851, #874)
 - Fixed error message on clashing transaction focuses. (#879)
 - Don't call`/bin/true`; macOS doesn't have it.  Just call `true`. (#885)
 - Deprecate `exec_prepared()`; just use `exec()` with a `pqxx::prepped`.